syntax = "proto3";

option go_package = "application/grpc/pb";

message Tag {
  string tag = 1;
  int32 count = 2;
}

message TagListRequest {
  int32 page = 1;
  int32 limit = 2;
  string sort = 3;
}
message TagListByCategoryRequest {
  string categoryId = 1;
  int32 page = 2;
  int32 limit = 3;
  string sort = 4;
}

message TagListResponse {
  repeated Tag tags = 1;
  int64 total = 2;
}

service TagService {
  rpc GetAll (TagListRequest) returns (TagListResponse) {};
  rpc GetAllByCategory (TagListByCategoryRequest) returns (TagListResponse) {};
}